fixed issue where horizontal scroll bar appeared on full size screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -152,7 +152,6 @@ table {
     display: flex;
     flex-direction: row;
     margin-left: 9rem;
-    width: 100%;
     height: 100vh;
     padding: 0 1rem;
 }
@@ -160,7 +159,6 @@ table {
 .Main_container {
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
     align-items: center;
     width: 100%;
     min-width: 29rem;
